--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bacon.js countdown app.",
   "main": "dist/js/bacon-clock.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start --single-run"
   },
   "keywords": [
     "reactive",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^4.1.6",
+    "babel-plugin-espower": "^1.0.0",
     "babelify": "^6.4.0",
     "browser-sync": "^2.10.0",
     "browserify": "^12.0.1",
@@ -26,6 +27,15 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
     "gulp-watch": "^4.3.5",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.0",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
+    "power-assert": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
